tests/negative/gold/this_test.gold
tests/negative/this_test.toit:20:12: error: Can't access instance members in field initializers.
  field := foo
           ^~~
tests/negative/this_test.toit:21:17: error: Can't access 'this' in a field initializer
  field2 := bar this
                ^~~~
tests/negative/this_test.toit:13:5: error: Can't access instance members before `super` call.
    foo
    ^~~
tests/negative/this_test.toit:17:9: error: Can't access 'this' before a super call in the constructor
    bar this
        ^~~~
tests/negative/this_test.toit:24:12: error: Can't access 'this' in static method
    return this + foo
           ^~~~
tests/negative/this_test.toit:24:19: error: Can't access instance members in static contexts
    return this + foo
                  ^~~
Compilation failed.
